#2533 CSS fix for Help alignment

--- a/css/modules/aioseop_module.css
+++ b/css/modules/aioseop_module.css
@@ -83,8 +83,7 @@
 
 .aioseop_tabs .aioseop_meta_box_help,
 .aioseop_tabs .aioseop_meta_box_help:active {
-	margin-top: 4px;
-	margin-right: 45px;
+	margin-top: 10px;
 }
 
 .aioseop_label {
